网关通过api同步
